# SFML_Game_Development

./: CMakeLists.txt
src/: Game.cpp  Game.h  ResourceHolder.h  ResourceHolder.inl  World.cpp  World.h  main.cpp
src/Entities/: Aircraft.cpp  Aircraft.h  Entity.cpp  Entity.h  SceneNode.cpp  SceneNode.h  SpriteNode.cpp  SpriteNode.h
src/Managers/: ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h
